# usask_shelterbelt_yolo

./: .gitignore  01_yolo_training_and_evaluation.ipynb  README.md  pyproject.toml  shelterbelt.yaml
