[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usask-shelterbelt-yolo"
version = "0.1.0"
description = "A YOLO project for object detection on shelterbelts."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Morteza Khazaei", email = "morteza.khazaei@usherbrooke.ca"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "ultralytics",
    "mlflow",
    "ipykernel"
]

[project.urls]
Homepage = "https://github.com/Morteza-Khazaei/usask_shelterbelt_yolo"
"Bug Tracker" = "https://github.com/Morteza-Khazaei/usask_shelterbelt_yolo/issues"